# python-ha

./: .gitignore  README.md  pyproject.toml
src/litesql_ha/: __init__.py  embedded_replicas.py  ha_client.py  ha_connection.py  ha_datasource.py
src/litesql_ha/_generated/: __init__.py
src/litesql_ha/client/: __init__.py  converter.py
